# libltd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: cli_arguments.hpp  cli_flags.hpp  err.hpp  fmt.hpp  ltd.hpp  test_unit.hpp
include/ltd/: auto_dltr.hpp  err.hpp  fmt.hpp  ltd.hpp  raii_ptr.hpp  ref_counter.hpp  std_alias.hpp  test_unit.hpp
include/ltd/details/: constraints.hpp  strconv.hpp  traits.hpp
source/: cli_flags.cpp  err.cpp  fmt.cpp  ref_counter.cpp  test_unit.cpp
src/: cli_arguments.cpp  cli_flags.cpp  err.cpp  fmt.cpp  test_unit.cpp
tests/: auto_dltr.cpp  cli_test.cpp  fmt_float.cpp  fmt_int.cpp  fmt_string.cpp  raii_ptr.cpp
